Fixed table when stretching

--- a/css/style.scss
+++ b/css/style.scss
@@ -56,20 +56,19 @@ h3 {
   padding-bottom: 1.25rem;
 }
 
-table {
+tbody {
   min-width: 50%;
 }
 
-
 tr {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   font-size: 1rem;
   line-height: 1.375rem;
   text-align: left;
-  width: 100%;
 }
 
 th {
-  width: 50%;
   font-size: 1rem;
   color: $mid-grey;
   font-weight: 400;
